feat: bind API keys to their creators
